# tfcli

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
tests/: conftest.py  test_base.py  test_resources.py
tfcli/: __init__.py  cli.py  filters.py  util.py
tfcli/resources/: __init__.py  asg.py  base.py  cloudwatch.py  ec2.py  elasticache.py  elb.py  emr.py  iam.py  igw.py  network.py  rds.py  s3.py  sns.py  sqs.py  tf.j2
