[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=1

[tool:pytest]
# https://docs.pytest.org/en/2.8.7/customize.html
testpaths = tests
log_cli   = true
log_cli_level = INFO

[coverage:run]
# https://coverage.readthedocs.io/en/coverage-4.4.2/config.html
branch = True
source =
    tfcli
